--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "16.3.1",
     "express": "^4.17.2",
     "medusa-file-minio": "^1.3.0",
+    "medusa-file-r2": "^0.0.2",
     "medusa-fulfillment-manual": "^1.1.38",
     "medusa-interfaces": "^1.3.7",
     "medusa-payment-manual": "^1.0.24",
